# ecoTracker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.monitoring.yaml  docker-compose.root.yaml  docker-compose.test.yaml  docker-compose.testrunner.yaml  manage.py  openapi.yaml  pyproject.toml  requirements-test.txt  requirements.txt  test_calc.py
backend/: alembic.ini  pyproject.toml
backend/application/: settings.py
backend/application/database/migrations/: env.py
backend/src/application/database/: base.py  holder.py
backend/src/application/database/migrations/: env.py
backend/src/core/dto/: achievement.py  application_role.py  base.py  community.py  community_role.py  contact.py  misc.py  mission.py  mock.py  occupancy.py  occypancy.py  plugs.py  privacy.py  score.py  settings.py  shared.py  subscription.py  tasks.py  user.py  user_settings.py
backend/src/core/dto/challenges/: status.py  type.py
backend/src/core/dto/community/: filters.py  invite.py  privacy.py  role.py
backend/src/core/dto/subscription/: constraint.py  period.py  period_unit.py  type.py
backend/src/core/dto/user/: contact.py  role.py
backend/src/core/entity/: achievement.py  community.py  contact.py  mission.py  score.py  subscription.py  task.py  user.py  user_settings.py
backend/src/core/enum/: achievement.py  base.py  community.py  contact.py  role.py  score.py  subscription.py  variable_type.py
backend/src/core/enum/application/: language.py  role.py
backend/src/core/enum/challenges/: related.py  status.py  type.py
backend/src/core/enum/community/: role.py
backend/src/core/enum/subscription/: subscription.py
backend/src/core/enum/user/: contact.py
backend/src/core/exception/: base.py  community.py  mission.py  task.py  translate.py  user.py
backend/src/core/exeption/: base.py
backend/src/core/interfaces/: base.py
backend/src/core/interfaces/repository/: community.py  core.py  mission.py
backend/src/core/interfaces/subscription/: subscription.py
backend/src/core/interfaces/task_repo/: task.py
backend/src/core/interfaces/user/: application_role.py  contact.py  subscription.py  task.py  user.py
backend/src/core/interfaces/user_repo/: application_role.py  contact.py  (+2 more)
backend/src/core/mixin/: base.py  variable_type.py
backend/src/core/typing/: base.py
backend/src/data/achievement/: models.py
backend/src/data/base/: base_models.py
backend/src/data/community/: models.py
backend/src/data/language/: models.py
backend/src/data/mission/: models.py
backend/src/data/models/: __init__.py
backend/src/data/subscription/: models.py
backend/src/data/task/: models.py
backend/src/data/user_repo/: models.py
backend/tests/: fixtures.py  test_cringe.py
(+779 files in other folders)
