[tool.poetry]
name = "ecotracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.10.4"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
asyncpg = "^0.27.0"
faker = "^18.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.263"
pre-commit = "^3.2.2"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
click = "^8.1.3"
pyclean = "^2.7.0"
faker = "^18.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "B", "UP", "SIM"]
ignore = []
fix = false

# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "tests"
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.per-file-ignores]
"src/application/database/migrations/env.py" = ["F403"]
"src/data/models/__init__.py" = ["F403"]
"src/core/enum/__init__.py" = ["F403"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pytest.ini_options]
asyncio_mode = "auto"