[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ecoteam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.9"
requests = "^2.28.2"
urllib3 = "^1.26.15"
alembic = "^1.10.3"
asyncpg = "^0.27.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
